--- a/fev html.html
+++ b/fev html.html
@@ -2,6 +2,8 @@
 <html>
     <head>
        <H1>BOOK STORE</H1> 
+       <h2>This is my first commit </h2>
+       <h2>This is my second commit </h2>
     </head>
 <body>
  <table>
@@ -80,5 +82,6 @@
     <h1>HI</h1>
     <h3> Hey</h3>
     <p> comment</p>
+    <p>new comment</p>
 </body>
 </html>
